full screen and zoom-range has been added

--- a/src/app/maps/pages/zoom-range/zoom-range.component.html
+++ b/src/app/maps/pages/zoom-range/zoom-range.component.html
@@ -1,1 +1,18 @@
-<p>zoom-range works!</p>
+<div #divMap class="map-container"></div>
+<div class="row">
+  <div class="col-12">
+    <label class="form-label">
+      Zoom: {{zoomLevel | number:'2.0-2'}}
+      -Lng, Lat: [{{center[0] | number:'2.4-4'}}, {{center[1] | number:'2.4-4'}}]
+    </label>
+    <input type="range" class="form-range" (input)="setZoom(zoomInput.value)" [value]="zoomLevel" min="0" max="18" #zoomInput>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary" (click)="zoomOut()">
+      <em class="bi bi-dash"></em>
+    </button>
+    <button class="btn btn-primary float-end" (click)="zoomIn()">
+      <em class="bi bi-plus"></em>
+    </button>
+  </div>
+</div>
