--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+.map-container {
+  height: 100%;
+  width: 100%;
+}
+
 app-menu {
   position: fixed;
   top: 20px;
